# DepthAI_Yolo

./: .commitlintrc.yaml  .gitignore  .mise.local.toml  .pre-commit-config.yaml  404.html  README.md  download_models.py  index.html  main_api.py  main_api_sr.py  main_sdk.py  main_sdk_v1.2.py  main_sdk_v1.9.py  mkdocs.yml  pyproject.toml  requirement-sdk.txt  requirements-sdk.txt  requirements.txt  ruff.toml  run.py  sitemap.xml
docs/: lr.md  oak-d.md  sr.md
json/: yolo-v3-tf.json  yolo-v3-tiny-tf.json  yolo-v4-tf.json  yolo-v4-tiny-tf.json  yolov3_coco_416x416.json  yolov4_coco_608x608.json  yolov4_tiny_coco_416x416.json  yolov5n.json  yolov5n_coco_416x416.json  yolov5n_coco_640x352.json  yolov6n.json  yolov6n_coco_416x416.json  yolov6n_coco_640x640.json  yolov6nr1_coco_512x288.json  yolov6nr1_coco_640x352.json  yolov6nr3_coco_416x416.json  yolov6nr3_coco_640x352.json  yolov6t.json  yolov6t_coco_416x416.json  yolov7.json  yolov7_coco_416x416.json  yolov7tiny.json  yolov7tiny_coco_416x416.json  yolov7tiny_coco_640x352.json  yolov8n_coco_416x416.json  yolov8n_coco_640x352.json
lr/: index.html
models/: .gitattributes  yolo-v3-tf_openvino_2021.4_6shave.blob  yolo-v3-tiny-tf_openvino_2021.4_6shave.blob  yolo-v4-tf_openvino_2021.4_6shave.blob  yolo-v4-tiny-tf_openvino_2021.4_6shave.blob  yolov4_tiny_coco_416x416_openvino_2021.4_6shave.blob  yolov5n_openvino_2021.4_6shave.blob  yolov6n_openvino_2021.4_6shave.blob  yolov6t_openvino_2021.4_6shave.blob  yolov7_openvino_2021.4_6shave.blob  yolov7tiny_openvino_2021.4_6shave.blob
oak-d/: index.html
requirements/: requirements.in
sdk_scripts/: requirements-sdk.txt
search/: search_index.json
sr/: index.html
src/depthai_yolo/: __init__.py  __main__.py  cli.py  depthai_enums.py  download_models.py  main_api.py  main_api.py.bak  main_sdk_v1.2.py  nn_config.py  utils.py  yolo_define_models.py
src/depthai_yolo/jsons/: yolo-v3-tf.json  yolo-v3-tiny-tf.json  yolo-v4-tf.json  yolo-v4-tiny-tf.json  yolov3.json  yolov3_coco_416x416.json  yolov4.json  yolov4_coco_608x608.json  yolov4_tiny_coco_416x416.json  yolov5n.json  yolov5n_coco_416x416.json  yolov5n_coco_640x352.json  yolov6n.json  yolov6n_coco_416x416.json  yolov6n_coco_640x640.json  yolov6nr1_coco_512x288.json  yolov6nr1_coco_640x352.json  yolov6nr3_coco_416x416.json  yolov6nr3_coco_640x352.json  yolov6t.json  yolov6t_coco_416x416.json  yolov7.json  yolov7_coco_416x416.json  yolov7tiny.json  yolov7tiny_coco_416x416.json  yolov7tiny_coco_640x352.json  yolov7tiny_waldo_288x512.json  yolov7tiny_waldo_416x768.json  yolov8n_coco_416x416.json  yolov8n_coco_640x352.json
src/depthai_yolo/pipelines/: common.py  lr.py  sr.py
