[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "depthai_yolo"
authors = [
    { name = "Luxonis", email = "support@luxonis.com" },
]
maintainers = [
    { name = "Richard", email = "richard@arducam.com" },
]
description = "YOLOs object detection example using DepthAI"
requires-python = ">= 3.7"
license = { text = "MIT License" }
readme = "README.md"
keywords = ["depthai", "yolo", "object detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Repository = "https://github.com/richard-xx/DepthAI_Yolo.git"
"Bug Tracker" = "https://github.com/richard-xx/DepthAI_Yolo/issues"


[project.scripts]
depthai_yolo = "depthai_yolo.cli:app"
depthai_yolo_download = "depthai_yolo.download_models:app"

[tool.rye]
dev-dependencies = [
    "setuptools>=70.0.0",
    "pip>=24.0",
    "wheel>=0.43.0",
    "build",
    "hatch>=1.12.0",
]

[tool.hatch.version]
source = "regex_commit"
path = "src/depthai_yolo/__init__.py"
commit_message = "🚀 Bump version {current_version} → {new_version}"
tag_message = "🔖 New version {new_version}"

[tool.hatch.build.targets.sdist]
exclude = [
    "test",
    "docs",
    "examples",
    "tools",
    "*.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/depthai_yolo"]
sources = { "src/depthai_yolo" = "depthai_yolo" }

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements/requirements.in"]
